--- a/cplusplus/CatLearnQtOpenGL/src/1.OpenGLBasics/1.triangle/mainwindow.ui
+++ b/cplusplus/CatLearnQtOpenGL/src/1.OpenGLBasics/1.triangle/mainwindow.ui
@@ -40,7 +40,14 @@
      </widget>
     </item>
     <item>
-     <widget class="QWidget" name="widget_2" native="true"/>
+     <widget class="QWidget" name="widget_2" native="true">
+      <property name="maximumSize">
+       <size>
+        <width>300</width>
+        <height>16777215</height>
+       </size>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -50,7 +57,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
